Detailed Explanation of Exploratory data analysis Code & Methods

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "ATP (Association of Tennis Professionals) and WTA (Women's Tennis Association) rankings are based on the points earned by players in ATP or WTA-certified events over the preceding 52-weeks. Each player or team has a maximum of one bounce after the ball has been hit by their opponent to return the ball over the net and within the boundaries of the court. When a player then fails to return the ball into the correct court, the opponent wins a point. The aim of tennis is to win enough points to win a game, enough games to win a set, and enough sets to win a match. Each tennis match includes best-of-three tiebreak sets and each set has at least 6 games. Whoever starts serving continues to serve until that game is over. Games are scored starting from 0 to 40, then game point, which wins the game (United States Tennis Association, n.d.).\n",
     "\n",
-    "Our project will answer whether a professional tennis player will win or lose the match based on age, rank, and first-serve points won. The dataset we are using contains 8614 rows of data from tennis matches for top 500 players from 2017 to 2019. The dataset includes the tournament's ID, name, level, date and draw size, and the match number, score and time. Also has winners and losers ID, seed, name, age, height, hand used, country, rank, rank points, and their aces, serve points, break points faced and saved in the match. Age of players is calculated when they’re in the match and reported in decimals. Rank is based on the player’s ATP/WTA rank as of the tournament date. First-serve points won are recorded directly from the match listed in this dataset. We will omit all rows with n/a after selecting our predictors to remove all incomplete records from our analysis and ensure missing data does not disrupt our analysis.\n"
+    "Our project will answer whether a professional tennis player will win or lose the match based on age, rank, and first-serve points won. The dataset we are using contains 8614 rows of data from tennis matches for top 500 players from 2017 to 2019. The dataset includes the tournament's ID, name, level, date and draw size, and the match number, score and time. Also has winners and losers ID, seed, name, age, height, hand used, country, rank, rank points, and their aces, serve points, break points faced and saved in the match. Age of players is calculated when they’re in the match and reported in decimals. Rank is based on the player’s ATP/WTA rank as of the tournament date. First-serve points won are recorded directly from the match listed in this dataset.\n"
    ]
   },
   {
@@ -43,68 +43,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ac33c38-1b9d-4be8-8a25-e0651928ec4f",
+   "cell_type": "markdown",
+   "id": "2a67f8a9-1c24-4af9-ba5f-2748fc01a8c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0fa2040d-69b0-45d1-a869-872d9ece0f4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "library(tidyverse)\n",
-    "library(repr)\n",
-    "library(tidymodels)"
+    "We will conduct our data analysis by building a binary classification model with K-nearest neighbours algorithm using the “tidymodels” R package. Prediction of observations without a known class (i.e. player in a new match or match in progress) to a class (i.e., win or lose) will be based on a majority vote of the closest neighbouring classes. \n",
+    "\n",
+    "We start by loading the “tidyverse” package needed for our analysis, and loading the “tidymodels” package to help make and use models, such as classifiers. The “tidymodels” package also helps to keep our code simple, readable and accurate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "832c02fc-7cba-4800-902e-fbcce30c0610",
+   "execution_count": 62,
+   "id": "0fa2040d-69b0-45d1-a869-872d9ece0f4b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "library(tidyverse)\n",
+    "library(tidymodels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555d937e-9d51-4b08-a93b-b32625479164",
+   "metadata": {},
+   "source": [
+    "Our first step is to read, wrangle, and explore the data using visualizations in order to better understand the data we are working with. \n",
+    "\n",
+    "Our data of ATP matches of 2017, 2018, and 2019 are read from the web separately for each year, then combined into one dataset with match data from all three years. We will select winners’ and losers’ age, rank, and first-serve points won (1stWon)  in the match as the variables for prediction. We will omit all rows with n/a after selecting our predictors to remove all incomplete records from our analysis and ensure missing data does not disrupt our analysis. \n",
+    "\n",
+    "Then, the data is wrangled so that the age of both winner and loser of the match are combined into one column, and the same is done for rank and first-serve points won. Thus, the “result” column can be created and since we will be working with “result” as a categorical statistical variable, we will convert it to a factor.\n",
+    "\n",
+    "The seed is set, so the wrangled dataset is split randomly, but reproducibly, to create a training set (75% of original dataset) and testing set (25% of original dataset) with strata argument as the categorical label variable “result”. \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -741,20 +712,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54420451-cbef-4921-8bd0-61cc9377fc05",
+   "cell_type": "markdown",
+   "id": "08d2fe92-a260-4e3b-ae3b-f725ca2b7eec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can see from the data above that the training set contains 12490 observations, while the test set contains 4164 observations. This corresponds to a train and test split of 75% to 25%, as desired."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f70334e-f6eb-4389-880a-097584293bb0",
+   "cell_type": "markdown",
+   "id": "a9b90881-0b57-4659-9ac6-cea0890c6e0d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now, we will conduct exploratory data analysis using the ATP training data. We will start by finding the mean of each predictor variable categorized by result to observe the differences of these variables between winners and losers. \n",
+    "\n",
+    "From Table 1, the greatest difference is shown by the winner’s average rank compared to the loser’s average rank, followed by the average first-serve points won. The average age does not appear to have much difference between winners and losers."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -839,12 +812,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb7a138f-f72d-444f-b93a-4a539234577e",
+   "cell_type": "markdown",
+   "id": "dc510803-3ab8-4b45-9292-f066698d0a3f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A potential issue in a data set for a classifier is class imbalance (i.e., when one label is much more common than another). Classifiers like the K-nearest neighbour algorithm use the labels of nearby points to predict the label of a new point, therefore, if there are many more data points with one label, then the classifier will be more likely to predict that label overall. So we will find the number and percentage of wins and losses observations in our data set.\n",
+    "\n",
+    "From Table 2, we have 6245 (50%) wins and 6245 (50%) losses observations, as expected since our original data source included data on both winners and losers for each row. Thus, the classes in our dataset are balanced and the balancing data preprocessing is not required."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -915,12 +890,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37d06fe7-5401-4215-9b18-ea6c873fe00d",
+   "cell_type": "markdown",
+   "id": "799d9878-2124-4665-b430-58ab43eeebdc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The training data is checked to ensure that all rows with missing data have been removed in the wrangling step. From Table 3, we can verify that there are zero rows in the training dataset with missing data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -984,12 +959,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9415318e-aded-415c-80ae-de1a42f4b15e",
+   "cell_type": "markdown",
+   "id": "db152d9d-0f3f-4c31-9b6d-e08f33c9efb9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Next, we will create a set of histograms to visualize the distribution of wins and losses for each predictor variable (age, rank, and first-serve points won). We will select our own colorblind-friendly colours: “gold2” for light gold and “dodgerblue” for light blue."
+   ]
   },
   {
    "cell_type": "code",
@@ -1220,12 +1195,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3559b3c0-e4f2-42c0-a0f1-58af68787fb3",
+   "cell_type": "markdown",
+   "id": "51615f66-692a-4c60-ae93-9c9c04f294b9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Figure 1a and 1b indicates a reduction of wins for players around 24 to 25 years old, and 29 year old players contribute the most wins. Also, 36.25 to 38 year-old players have double the amount of wins than losses. Figures 2a and 2b show players ranked in the top 25 have a significantly higher number of wins than losses while players ranked from 100 onwards had significantly more losses than wins. From Table 1, the average rank of the winner is also higher than the player that loses. In Figure 3a and 3b, higher first-serve points won relates to more number of wins than losses, especially after 37 points. Winners of matches also have a higher average first-serve point than losers of the match as shown in Table 1. Thus, rank and first-serve points will serve as stronger predictors and the age predictor could help differentiate when the other two predictors have similar values."
+   ]
   },
   {
    "cell_type": "code",
