Minor explanation edits

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -293,7 +293,7 @@
    "id": "a9b90881-0b57-4659-9ac6-cea0890c6e0d",
    "metadata": {},
    "source": [
-    "Now, we will conduct exploratory data analysis using the ATP training data. We will start by finding the mean of each predictor variable categorized by result to observe the differences of these variables between winners and losers. \n",
+    "Now, we will conduct exploratory data analysis using the ATP training data. We will start by finding the mean of each predictor variable categorized by result to observe the differences of these variables between winning and losing a match.\n",
     "\n",
     "From Table 1, the greatest difference is shown by the winner’s average rank compared to the loser’s average rank, followed by the average first-serve points won. The average age does not appear to have much difference between winners and losers."
    ]
@@ -532,7 +532,7 @@
    "id": "db152d9d-0f3f-4c31-9b6d-e08f33c9efb9",
    "metadata": {},
    "source": [
-    "Next, we will create a set of histograms to visualize the distribution of wins and losses for each predictor variable (age, rank, and first-serve points won). We will select our own colorblind-friendly colours: “gold2” for light gold and “dodgerblue” for light blue."
+    "Next, we will create a set of histograms to visualize the distribution of each predictor variable (age, rank, and first-serve points won) for match wins and losses. We will select our own colorblind-friendly colours: “gold2” for light gold and “dodgerblue” for light blue."
    ]
   },
   {
