discussion first two parts

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -1281,12 +1281,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be91156b-8512-4429-841f-bcce4189fb4c",
+   "cell_type": "markdown",
+   "id": "1af10aed-8f32-42fa-9c7c-759de5c17566",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### What did we find?\n",
+    "For ages, although the average for wins and losses are fairly the same, the distribution is slightly different. While most players ranked top 200 were aged 26-32.5, the age distribution among winners is narrower than that of losers, and those aged 33 or above had more losses than wins. For ranks, players ranked in the top 25 have a significantly higher number of wins than losses, while the number of losses is more likely contributed by players that rank beyond 50, and losses are continued to be greater than wins for lower ranks. For getting the 1st serve point, higher first-serve point contributes to higher chance of winning, as players getting first-serve points below 25 have more losses than wins, white those getting above 40 have more wins than losses, making a noticeable shift of lower first-serve points causes less wins."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5626eee-82a5-4fd5-9d80-77e124e6320c",
+   "metadata": {},
+   "source": [
+    "#### Is the result aligned with what we expected?\n",
+    "The results are aligned with the expected outcomes. About age, research was conducted that athletes reached their peaks at the age of 25-30, as muscle endurance and strength started to decline after 30s, but sufficient training may have a prolonged effect on ageing; however, young age isn’t completely beneficial for players due to lack of skills and insufficient training. About ranks, they were based on ATP/WTA rank as of tournament date, which has significant impact as ranks varied a lot by their competition’s performance, with their previous record as reference, it became easier to predict the winner of a game. About first-serve, research suggests that getting higher first-serve points helps dictate the flow of tennis, with better control of the game, players may have a better mentality when facing the opponent."
+   ]
   },
   {
    "cell_type": "markdown",
