--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -1295,7 +1295,7 @@
    "metadata": {},
    "source": [
     "#### Is the result aligned with what we expected?\n",
-    "The results are aligned with the expected outcomes. About age, research was conducted that athletes reached their peaks at the age of 25-30, as muscle endurance and strength started to decline after 30s, but sufficient training may have a prolonged effect on ageing; however, young age isn’t completely beneficial for players due to lack of skills and insufficient training. About ranks, they were based on ATP/WTA rank as of tournament date, which has significant impact as ranks varied a lot by their competition’s performance, with their previous record as reference, it became easier to predict the winner of a game. About first-serve, research suggests that getting higher first-serve points helps dictate the flow of tennis, with better control of the game, players may have a better mentality when facing the opponent."
+    "The results are aligned with the expected outcomes. About age, research was conducted that athletes reached their peaks at the age of 25-30, as muscle endurance and strength started to decline after 30s, but sufficient training may have a prolonged effect on ageing `2`; however, young age isn’t completely beneficial for players due to lack of skills and insufficient training. About ranks, they were based on ATP/WTA rank as of tournament date, which has significant impact as ranks varied a lot by their competition’s performance, with their previous record as reference, it became easier to predict the winner of a game. About first-serve, research suggests that getting higher first-serve points helps dictate the flow of tennis `3`, with better control of the game, players may have a better mentality when facing the opponent."
    ]
   },
   {
@@ -1319,7 +1319,11 @@
    "id": "392f67fb-79ec-4629-95f6-24708ccfef65",
    "metadata": {},
    "source": [
-    "United States Tennis Association. (n.d.). Scoring Points & Tennis Sets. USTA. Retrieved April 10, 2023, from https://www.usta.com/en/home/improve/tips-and-instruction/national/tennis-scoring-rules.html"
+    "United States Tennis Association. (n.d.). Scoring Points & Tennis Sets. USTA. Retrieved April 10, 2023, from https://www.usta.com/en/home/improve/tips-and-instruction/national/tennis-scoring-rules.html\n",
+    "\n",
+    "`2` What Age Do Athletes Peak? (n.d.). Built for AthletesTM. https://builtforathletes.com/blogs/news/what-age-do-athletes-peak \n",
+    "\n",
+    "`3` Analytics, B. S. (2021, March 16). How Important is the Serve in Men’s Singles Tennis? BSA. https://www.bruinsportsanalytics.com/post/serve_importance"
    ]
   }
  ],
