Add & update format for References

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -1308,23 +1308,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d064b3-703f-480f-b627-680431783618",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "392f67fb-79ec-4629-95f6-24708ccfef65",
    "metadata": {},
    "source": [
+    "‌Brycki, J. (2018, December 7). Game, set, match: How to price a tennis match. Pinnacle. Retrieved April 11, 2023, from https://www.pinnacle.com/en/betting-articles/Tennis/how-to-price-a-tennis-match/NBKJM2N7PJG4DNFJ \n",
+    "\n",
+    "Costello, N. (2020, February 4). What age do athletes peak? Built for Athletes. Retrieved April 11, 2023, from https://builtforathletes.com/blogs/news/what-age-do-athletes-peak.\n",
+    "\n",
+    "Mirpuri, S. (2021, March 15). How important is the serve in men's singles tennis? Bruin Sports Analytics. Retrieved April 11, 2023, from https://www.bruinsportsanalytics.com/post/serve_importance \n",
+    "\n",
+    "Sackmann, J. (2020, March 13). JeffSackmann/tennis_atp: ATP Tennis Rankings, Results, and Stats. GitHub. Retrieved February 28, 2023, from https://github.com/JeffSackmann/tennis_atp  \n",
+    "\n",
     "United States Tennis Association. (n.d.). Scoring Points & Tennis Sets. USTA. Retrieved April 10, 2023, from https://www.usta.com/en/home/improve/tips-and-instruction/national/tennis-scoring-rules.html\n",
     "\n",
-    "`2` What Age Do Athletes Peak? (n.d.). Built for AthletesTM. https://builtforathletes.com/blogs/news/what-age-do-athletes-peak \n",
-    "\n",
-    "`3` Analytics, B. S. (2021, March 16). How Important is the Serve in Men’s Singles Tennis? BSA. https://www.bruinsportsanalytics.com/post/serve_importance"
+    "Yue, J. C., Chou, E. P., Hsieh, M.-H., & Hsiao, L.-C. (2022, April 8). A study of forecasting tennis matches via the Glicko model. National Library of Medicine. Retrieved April 11, 2023, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8992979/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e260f7-5168-48cc-bcec-1c1a070dc675",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
