Move Table label/title to directly below tables

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -723,14 +723,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "35a6f817-a337-4fa4-a06e-352f1654af8f",
-   "metadata": {},
-   "source": [
-    "#### Table 1: Means of the Predictor Variables"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "73e53b22-fe63-4efd-a4f6-05cdf219f55a",
@@ -806,20 +798,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74da97cc-d266-4282-993d-911fe29b8426",
+   "metadata": {},
+   "source": [
+    "##### Table 1: Means of the Predictor Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc510803-3ab8-4b45-9292-f066698d0a3f",
    "metadata": {},
    "source": [
     "A potential issue in a data set for a classifier is class imbalance (i.e., when one label is much more common than another). Classifiers like the K-nearest neighbour algorithm use the labels of nearby points to predict the label of a new point, therefore, if there are many more data points with one label, then the classifier will be more likely to predict that label overall. So we will find the number and percentage of wins and losses observations in our data set.\n",
     "\n",
     "From Table 2, we have 6245 (50%) wins and 6245 (50%) losses observations, as expected since our original data source included data on both winners and losers for each row. Thus, the classes in our dataset are balanced and the balancing data preprocessing is not required."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2c800b0-0956-4480-9aeb-3bd53fa3c7f5",
-   "metadata": {},
-   "source": [
-    "#### Table 2: Number of Observations in Each Class"
    ]
   },
   {
@@ -884,19 +876,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22fce35d-3f33-4ff4-90c2-40e690315b77",
+   "metadata": {},
+   "source": [
+    "##### Table 2: Number of Observations in Each Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "799d9878-2124-4665-b430-58ab43eeebdc",
    "metadata": {},
    "source": [
     "\n",
     "The training data is checked to ensure that all rows with missing data have been removed in the wrangling step. From Table 3, we can verify that there are zero rows in the training dataset with missing data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b7bae45e-cff0-4e82-8774-d5fd5b9548cc",
-   "metadata": {},
-   "source": [
-    "#### Table 3: Rows of Missing Training Data "
    ]
   },
   {
@@ -950,6 +942,14 @@
     "atp_train_missing_rows <- data.frame(missing_data_rows = sum(is.na(atp_train)))\n",
     "\n",
     "atp_train_missing_rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06994f06-6dbf-4d61-885a-789dd5e1eb49",
+   "metadata": {},
+   "source": [
+    "##### Table 3: Rows of Missing Training Data "
    ]
   },
   {
@@ -1904,7 +1904,7 @@
    "id": "ceac763a-8d16-44e8-b561-686f0c1bce50",
    "metadata": {},
    "source": [
-    "Table 4: Confusion Matrix"
+    "##### Table 4: Confusion Matrix"
    ]
   },
   {
