Made Methods/narration more concise (for word count)

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -39,9 +39,9 @@
    "id": "2a67f8a9-1c24-4af9-ba5f-2748fc01a8c8",
    "metadata": {},
    "source": [
-    "We will conduct our data analysis by building a binary classification model with K-nearest neighbours algorithm using the training dataset. For classification, prediction of observations without a known class (i.e. player in a new match or match in progress) to a class (i.e., win or lose) will be based on a majority vote of the closest neighbouring classes. The best number of neighbours, or best value of K will be determined by tuning. \n",
+    "We will conduct our data analysis by building a binary classification model with K-nearest neighbours algorithm using the training dataset. For classification, prediction of observations without a known class (i.e. player in a new match) to a class (i.e., win or lose) is based on a majority vote of the closest neighbouring classes. The best number of neighbours, or K value,  will be determined by tuning. \n",
     "\n",
-    "We start by loading the “tidyverse” package needed for our analysis, and loading the “tidymodels” package to help make and use the classifier and also to keep our code simple, readable and accurate."
+    "We loaded the “tidyverse” package needed for our analysis, and the “tidymodels” package to help make and use the classifier and to keep our code simple and accurate."
    ]
   },
   {
@@ -61,11 +61,12 @@
    "id": "555d937e-9d51-4b08-a93b-b32625479164",
    "metadata": {},
    "source": [
-    "Our first step is to read, wrangle, and explore the data using visualizations in order to better understand the data we are working with. \n",
+    "Our first step is to read, wrangle, and explore the dataset using visualizations to better understand the data we are working with. \n",
     "\n",
-    "Our data of ATP matches of 2017, 2018, and 2019 are read from the web separately for each year, then combined into one dataset with match data from all three years. We will select the data columns with winners’ and losers’ age, rank, and 1stWon (first-serve points won) in the match as the variables for prediction. We will omit all rows with n/a after selecting our predictors to remove all incomplete records from our analysis and ensure missing data does not disrupt our analysis. \n",
+    "Our ATP matches data from 2017, 2018, and 2019 are read from the web separately for each year, then combined into one dataset with match data from all three years. We will select the data columns with winners’ and losers’ age, rank, and 1stWon (first-serve points won) in the match as the variables for prediction. We omitted all rows with n/a after selecting our predictors to remove all incomplete records from our analysis and ensure missing data does not disrupt our analysis. \n",
     "\n",
-    "Then, the data is wrangled so that the age of both winner and loser of the match are combined into one column, and the same is done for rank and first-serve points won. Thus, the “result” column can be created and since we will be working with “result” as a categorical statistical variable, we will convert it to a factor.\n",
+    "\n",
+    "Then, the data is wrangled so that the age of both winner and loser of the match are combined into one column, and the same is done for rank and first-serve points won. So, the “result” column can be created. Since we will be working with “result” as a categorical statistical variable, we converted it to a factor.\n",
     "\n",
     "The seed is set, so the wrangled dataset is split randomly, but reproducibly, to create a training set (75% of original dataset) and testing set (25% of original dataset) with strata argument as the categorical label variable “result”. "
    ]
@@ -717,7 +718,7 @@
    "id": "a9b90881-0b57-4659-9ac6-cea0890c6e0d",
    "metadata": {},
    "source": [
-    "Now, we will conduct exploratory data analysis using the ATP training data. We will start by finding the mean of each predictor variable categorized by result to observe the differences of these variables between winning and losing a match. \n",
+    "Now, exploratory data analysis is conducted using the ATP training data. We start by finding the mean of each predictor variable categorized by result to observe the differences of these variables between winning and losing a match. \n",
     "\n",
     "From Table 1, the greatest difference is shown by the winner’s average rank compared to the loser’s average rank, followed by the average first-serve points won. The average age does not appear to have much difference between winners and losers."
    ]
@@ -809,7 +810,7 @@
    "id": "dc510803-3ab8-4b45-9292-f066698d0a3f",
    "metadata": {},
    "source": [
-    "A potential issue in a data set for a classifier is class imbalance (i.e., when one label is much more common than another). Classifiers like the K-nearest neighbour algorithm use the labels of nearby points to predict the label of a new point, therefore, if there are many more data points with one label, then the classifier will be more likely to predict that label overall. So we will find the number and percentage of wins and losses observations in our data set.\n",
+    "A potential issue in a data set for a classifier is class imbalance. Classifiers like the K-nearest neighbour algorithm use the labels of nearby points to predict a new point’s label, thus, if there are many more data points with one label, then the classifier will be more likely to predict that label overall. So we found the number and percentage of wins and losses observations in our data set.\n",
     "\n",
     "From Table 2, we have 6245 (50%) wins and 6245 (50%) losses observations, as expected since our original data source included data on both winners and losers for each row. Thus, the classes in our dataset are balanced and the balancing data preprocessing is not required."
    ]
@@ -1456,7 +1457,7 @@
    "id": "15184ea6-2dde-4158-aba7-0e726f842d0b",
    "metadata": {},
    "source": [
-    "The new estimated accuracies are plotted. From Figure 5 we chose our K value as 72 since it has the highest estimated accuracy (59.40%). "
+    "The new estimated accuracies are plotted. From Figure 5 we chose our K value as 72 since it has the highest estimated accuracy (59.40%) and doesn’t change much from nearby values. "
    ]
   },
   {
