Update discussion for "future questions this could lead to"

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -1974,7 +1974,9 @@
     "\n",
     "The results are slightly aligned with the expected outcomes. About age, research shows that athletes reached their peaks at the age of 25-30, as muscle endurance and strength started to decline after 30s, but sufficient training may have a prolonged effect on ageing (Costello, 2020). However, young age isn’t completely beneficial for players due to lack of skills and insufficient training. As ranks were based on ATP/WTA rank as of tournament date, which has significant impact as ranks varied a lot by their competition’s performance, with their previous record as reference, it became easier to predict the winner of a game. Our findings reflect previous research conducted that getting higher first-serve points helps dictate the flow of tennis, gain better control of the game, so players have a better mentality when facing their opponent (Mirpuri, 2021). \n",
     "\n",
-    "The findings above are impactful due to the commercial value of each tennis match, especially for players that are highly ranked in the world. From sponsorships for prize money of a match, to finding suitable approaches for coaches and tennis clubs to train tennis players, and to analysing the probability and odds relationships behind the popular tennis betting markets. Shedding lights on the betting market, research (Brycki, 2018) supports that winning with higher serve points contribute to the better performance of tennis players, it even brings out that the timing of winning serve points are also crucial within a match, these supported the findings we have from our project, that first-serve points were critical for determining the chances of winning. Knowing the importance of ranks and first-serve points, it allows tennis clubs and sponsorships to invite their more prestigious and highly-ranked players to the games with a greater prize, speculators were also provided data for analysing the players that are worth placing a bet, and coaches can evaluate player’s performance and choose the suitable player for each round."
+    "The findings above are impactful due to the commercial value of each tennis match, especially for players that are highly ranked in the world. From sponsorships for prize money of a match, to finding suitable approaches for coaches and tennis clubs to train tennis players, and to analysing the probability and odds relationships behind the popular tennis betting markets. Shedding lights on the betting market, research (Brycki, 2018) supports that winning with higher serve points contribute to the better performance of tennis players, it even brings out that the timing of winning serve points are also crucial within a match, these supported the findings we have from our project, that first-serve points were critical for determining the chances of winning. Knowing the importance of ranks and first-serve points, it allows tennis clubs and sponsorships to invite their more prestigious and highly-ranked players to the games with a greater prize, speculators were also provided data for analysing the players that are worth placing a bet, and coaches can evaluate player’s performance and choose the suitable player for each round.\n",
+    "\n",
+    "We could further explore which serve or strategy would help gain advantages in a match that could lead to tailored skill training to foster a player’s growth and help understand opponents better. Using this dataset, we could explore the breakpoints saved and converted by a player to find out if they correlate to a player’s probability of winning with the “bpFaced” and “bpSaved” columns, and if different court coatings can impact a player’s performance with the “surface” data column."
    ]
   },
   {
@@ -2002,14 +2004,6 @@
     "\n",
     "Yue, J. C., Chou, E. P., Hsieh, M.-H., & Hsiao, L.-C. (2022, April 8). A study of forecasting tennis matches via the Glicko model. National Library of Medicine. Retrieved April 11, 2023, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8992979/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e260f7-5168-48cc-bcec-1c1a070dc675",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
