--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -1134,7 +1134,7 @@
    "id": "05f80806-32c4-4bbc-8327-2a2f002440b7",
    "metadata": {},
    "source": [
-    "To determine the K value to use in our model, we first did a 10-fold cross-validation by splitting the training data into 10 training and validation subsets. Then, we created a recipe using training data which centres and scales all predictors. Followed by creating a KNN model specification with neighbours parameter subject to be tuned with function tune(). "
+    "To determine the K value to use in our model, we first did a 10-fold cross-validation by splitting the training data into 10 training and validation subsets. Then, we created a recipe using training data which centres and scales all predictors and created a KNN model specification with neighbours parameter subject to be tuned with function tune()."
    ]
   },
   {
